--- a/NewsTagil/src/main/res/layout-small/activity_reg.xml
+++ b/NewsTagil/src/main/res/layout-small/activity_reg.xml
@@ -20,10 +20,10 @@
         android:layout_centerHorizontal="true"/>
 
     <EditText
+        android:textColor="@color/lightGray"
         android:id="@+id/reg_pass"
         android:layout_width="250dp"
         android:layout_height="30dp"
-        android:ems="10"
         android:background="@drawable/login_pass_bg"
         android:inputType="textPassword"
         android:layout_below="@+id/reg_login"
@@ -31,22 +31,22 @@
         android:layout_marginTop="14dp"/>
 
     <EditText
+        android:textColor="@color/lightGray"
         android:id="@+id/reg_mail"
         android:layout_width="250dp"
         android:layout_height="30dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/reg_mail_bg"
-        android:ems="10"
         android:inputType="textEmailAddress"
         android:layout_above="@+id/reg_login"
         android:layout_centerHorizontal="true"/>
 
     <EditText
+        android:textColor="@color/lightGray"
         android:id="@+id/reg_login"
         android:layout_width="250dp"
         android:layout_height="30dp"
         android:background="@drawable/login_input_bg"
-        android:ems="10"
         android:inputType="textPersonName"
         android:layout_centerVertical="true"
         android:layout_alignLeft="@+id/reg_mail"/>
